--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,4 +5,7 @@ html {
   padding: 0;
   font-family: 'Inter UI', sans-serif; }
 
+h1 {
+  font-size: 5em; }
+
 /*# sourceMappingURL=stylesheet.css.map */
