complete overhaul of the website

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,15 +1,36 @@
+@import "colours";
+@import "typography";
+//----------------------
+
 html{
+background: $background-grey;
 margin: 0;
 padding: 0;
-font-family: 'Inter UI', sans-serif;
 }
 
+content{
+max-width: 1440px;
+}
 
-header{
+nav{
+  //border: 1px solid red;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 1em 1em 1em 1em;
 }
 
 article{
+  margin: 1em 1em 1em 1em;
   display: flex;
-  border: red solid 1px;
+}
+
+
+section.info{
+  //border: 1px solid red;
+  display: flex;
+  margin: 3.5em 1em 3.5em 1em;
+  padding: 0;
+  max-width: 670px;
+  flex-direction: row;
 }
