--- a/css/master.css
+++ b/css/master.css
@@ -1,21 +1,100 @@
 @import url("https://rsms.me/inter/inter-ui.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
+@import url("https://rsms.me/inter/inter-ui.css");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:300");
 html {
-  margin: 0;
-  padding: 0;
   font-family: 'Inter UI', sans-serif; }
 
-header {
+a.logo, a.blog {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 0.8em;
+  color: #3E3535;
+  letter-spacing: 1.2px; }
+
+a.blog {
+  padding: 0px 7.5px 0px 7.5px; }
+
+a.logo:hover, a.blog:hover {
+  color: #FF3769; }
+
+ul {
+  font-size: 0.8em;
+  list-style: none;
+  padding: 0; }
+
+li {
+  font-size: 1.5em;
+  font-family: 'Roboto Mono', monospace;
+  text-transform: uppercase;
+  list-style: none;
+  padding: 0;
+  color: #0011FF; }
+
+b {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
+
+html {
+  background: #F7F7F7;
+  margin: 0;
+  padding: 0; }
+
+content {
+  max-width: 1440px; }
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   margin: 1em 1em 1em 1em; }
 
 article {
-  display: flex;
-  border: red solid 1px; }
+  margin: 1em 1em 1em 1em;
+  display: flex; }
 
-h1 {
-  font-size: 1em; }
+section.info {
+  display: flex;
+  margin: 3.5em 1em 3.5em 1em;
+  padding: 0;
+  max-width: 670px;
+  flex-direction: row; }
+
+html {
+  font-family: 'Inter UI', sans-serif; }
+
+a.logo, a.blog {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 0.8em;
+  color: #3E3535;
+  letter-spacing: 1.2px; }
+
+a.blog {
+  padding: 0px 7.5px 0px 7.5px; }
+
+a.logo:hover, a.blog:hover {
+  color: #FF3769; }
 
 ul {
+  font-size: 0.8em;
   list-style: none;
   padding: 0; }
+
+li {
+  font-size: 1.5em;
+  font-family: 'Roboto Mono', monospace;
+  text-transform: uppercase;
+  list-style: none;
+  padding: 0;
+  color: #0011FF; }
+
+b {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
 
 /*# sourceMappingURL=master.css.map */
