--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -7,10 +7,10 @@
   @media only screen and (max-width: 768px){}
 }
 
-@mixin flexbox() {
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-}
+// @mixin flexbox() {
+// 	display: -webkit-box;
+// 	display: -moz-box;
+// 	display: -ms-flexbox;
+// 	display: -webkit-flex;
+// 	display: flex;
+// }
