--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -1,6 +1,7 @@
 @import url("https://rsms.me/inter/inter-ui.css");
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300');
 @import "colours";
+@import "mixins";
 
 html{
 font-family: 'Inter UI', sans-serif;
@@ -38,7 +39,7 @@ li{
   color: $link-active;
 }
 
-b{
+b.intro{
   font-weight: 400;
   font-size:2.5em;
   color:$default-text;
