--- a/css/master.css
+++ b/css/master.css
@@ -16,7 +16,7 @@ a.logo, a.blog {
 a.blog {
   padding: 0px 7.5px 0px 7.5px; }
 
-a.logo:hover, a.blog:hover {
+a.logo:hover, a.blog:hover, a.projects:hover {
   color: #FF3769; }
 
 ul {
@@ -24,13 +24,14 @@ ul {
   list-style: none;
   padding: 0; }
 
-li {
+a.projects, li {
   font-size: 1.5em;
   font-family: 'Roboto Mono', monospace;
   text-transform: uppercase;
   list-style: none;
   padding: 0;
-  color: #0011FF; }
+  color: #0011FF;
+  text-decoration: none; }
 
 b.intro {
   font-weight: 400;
@@ -76,7 +77,7 @@ a.logo, a.blog {
 a.blog {
   padding: 0px 7.5px 0px 7.5px; }
 
-a.logo:hover, a.blog:hover {
+a.logo:hover, a.blog:hover, a.projects:hover {
   color: #FF3769; }
 
 ul {
@@ -84,13 +85,14 @@ ul {
   list-style: none;
   padding: 0; }
 
-li {
+a.projects, li {
   font-size: 1.5em;
   font-family: 'Roboto Mono', monospace;
   text-transform: uppercase;
   list-style: none;
   padding: 0;
-  color: #0011FF; }
+  color: #0011FF;
+  text-decoration: none; }
 
 b.intro {
   font-weight: 400;
