--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -33,5 +33,5 @@ section.info{
   margin: 3.5em 1em 3.5em 1em;
   padding: 0;
   max-width: 670px;
-  flex-direction: row;
+  flex-direction: column;
 }
