--- a/css/master.css
+++ b/css/master.css
@@ -51,6 +51,7 @@ content {
   max-width: 1440px; }
 
 nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
