--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -14,7 +14,7 @@ max-width: 1440px;
 }
 
 nav{
-  width: 100%;
+  //width: 100%;
   //border: 1px solid red;
   display: flex;
   justify-content: space-between;
