--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,12 +1,7 @@
+$phone-width: "(min-width:320px) and (max-width:425px)";
+$tablet: "(min-wdith: 425px) and (max-width:768px)";
 
-@mixin phone {
-    @media only screen and (max-width: 425px){
-      @content;
-    }
-}
-@mixin tablet {
-  @media only screen and (max-width: 768px){}
-}
+
 
 // @mixin flexbox() {
 // 	display: -webkit-box;
@@ -15,3 +10,15 @@
 // 	display: -webkit-flex;
 // 	display: flex;
 // }
+
+@mixin retina {
+  @media
+    only screen and (-webkit-min-device-pixel-ratio: 2),
+    only screen and (min--moz-device-pixel-ratio: 2),
+    only screen and (-o-min-device-pixel-ratio: 2/1),
+    only screen and (min-device-pixel-ratio: 2),
+    only screen and (min-resolution: 192dpi),
+    only screen and (min-resolution: 2dppx) {
+    @content;
+  }
+}
