--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -20,6 +20,22 @@ nav{
   justify-content: space-between;
   align-items: center;
   margin: 1em 1em 1em 1em;
+
+  aside.nav-left{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    img.logo-img{
+      width: 50%;
+      height: 50%;
+    }
+    a{
+      margin: 0 0 0 0;
+      padding: 0 0 0 0;
+    }
+  }
+
 }
 
 article{
