--- a/css/master.css
+++ b/css/master.css
@@ -29,13 +29,12 @@ ul {
   padding: 0; }
 
 a.projects, li {
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: 'Roboto Mono', monospace;
-  text-transform: uppercase;
   list-style: none;
-  padding: 0;
+  padding-right: 0.2em;
   color: #0011FF;
-  text-decoration: line-through; }
+  text-decoration: none; }
 
 b.intro {
   font-weight: 400;
@@ -105,13 +104,12 @@ ul {
   padding: 0; }
 
 a.projects, li {
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: 'Roboto Mono', monospace;
-  text-transform: uppercase;
   list-style: none;
-  padding: 0;
+  padding-right: 0.2em;
   color: #0011FF;
-  text-decoration: line-through; }
+  text-decoration: none; }
 
 b.intro {
   font-weight: 400;
