--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -36,13 +36,13 @@ ul{
 }
 
 a.projects,li{
-  font-size: 1.5em;
+  font-size: 2em;
   font-family: 'Roboto Mono', monospace;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   list-style: none;
-  padding: 0;
+  padding-right: 0.2em;
   color: $link-active;
-  text-decoration:line-through;}
+  text-decoration:none;}
 
 b.intro{
   font-weight: 400;
