--- a/css/master.css
+++ b/css/master.css
@@ -67,12 +67,15 @@ body.green {
   background-color: green; }
 
 content {
+  padding: 0;
   margin: 1em;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  flex-wrap: wrap; }
 
 article {
-  padding: 0; }
+  padding: 0;
+  width: 100%; }
 
 nav {
   display: flex;
@@ -98,9 +101,10 @@ ul.projects {
 
 section.info {
   display: flex;
-  margin: 3.5em 1em 3.5em 1em;
-  padding: 0;
-  max-width: 670px;
+  width: 100%;
+  margin: 0;
+  padding: 4em 0 4em 0;
+  width: 100%;
   flex-direction: column; }
 
 html {
