--- a/css/master.css
+++ b/css/master.css
@@ -48,6 +48,10 @@ a.elsewhere {
   color: #0011FF;
   text-decoration: none; }
 
+a.elsewhere:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
+
 b.intro {
   font-weight: 400;
   font-size: 2.5em;
@@ -152,6 +156,10 @@ a.elsewhere {
   padding-right: 0.2em;
   color: #0011FF;
   text-decoration: none; }
+
+a.elsewhere:hover {
+  color: #FF3769;
+  transition-duration: 0.2s; }
 
 b.intro {
   font-weight: 400;
