--- a/css/master.css
+++ b/css/master.css
@@ -20,10 +20,6 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-caption {
-  font-size: 1em;
-  font-weight: 100; }
-
 ul {
   font-size: 0.8em;
   list-style: none;
@@ -52,7 +48,7 @@ a.elsewhere:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-b.intro {
+b.info {
   font-weight: 400;
   font-size: 2.5em;
   color: #3E3535; }
@@ -129,10 +125,6 @@ a.logo:hover, a.blog:hover, a.projects:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-caption {
-  font-size: 1em;
-  font-weight: 100; }
-
 ul {
   font-size: 0.8em;
   list-style: none;
@@ -161,7 +153,7 @@ a.elsewhere:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-b.intro {
+b.info {
   font-weight: 400;
   font-size: 2.5em;
   color: #3E3535; }
