updates project page

--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -1,6 +1,15 @@
 
+//---Portfolio Colours---//
+
 $background-grey:#F7F7F7;
 $default-text:#3E3535;
 $link-active:#0011FF;
 $link-hover:#FF3769;
 $white:#FFFFFF;
+
+//----Project Colours---//
+
+$milya:#422FFA;
+$swish:#FFBB41;
+$creditsuisse:#172F5B;
+$posters:#262626;
