--- a/css/master.css
+++ b/css/master.css
@@ -25,16 +25,13 @@ ul {
   list-style: none;
   padding: 0; }
 
-a.project-list {
-  font-family: 'Inter UI', sans-serif;
-  font-size: 8em;
-  text-decoration: none;
-  font-weight: 100;
-  color: #0011FF; }
+b.info {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
 
-a.project-list:hover {
-  color: #FFFFFF;
-  transition-duration: 0.2s; }
+p {
+  font-size: 18px; }
 
 a.elsewhere {
   font-size: 2em;
@@ -48,13 +45,57 @@ a.elsewhere:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-b.info {
-  font-weight: 400;
-  font-size: 2.5em;
-  color: #3E3535; }
+a.project-list {
+  font-family: 'Inter UI', sans-serif;
+  font-size: 8em;
+  text-decoration: none;
+  font-weight: 100;
+  color: #0011FF; }
 
-p {
-  font-size: 18px; }
+a.project-list:hover {
+  color: #FFFFFF;
+  transition-duration: 0.2s; }
+
+li.milya, li.swish {
+  width: min-content; }
+
+li.creditsuisse, li.posters {
+  width: max-content; }
+
+li.milya:hover ~ .bg {
+  background: #422FFA; }
+
+li.swish:hover ~ .bg {
+  background: #FFBB41; }
+
+li.creditsuisse:hover ~ .bg {
+  background: #172F5B; }
+
+li.posters:hover ~ .bg {
+  background: #262626; }
+
+li.milya:hover ~ li.swish,
+li.milya:hover ~ li.creditsuisse,
+li.milya:hover ~ li.posters {
+  opacity: 0; }
+
+li.swish:hover ~ li.milya,
+li.swish:hover ~ li.creditsuisse,
+li.swish:hover ~ li.posters {
+  opacity: 0; }
+
+li.creditsuisse:hover ~ li.milya,
+li.creditsussie:hover ~ li.swish,
+li.creditsuisse:hover ~ li.posters {
+  opacity: 0; }
+
+li.posters:hover ~ li.milya,
+li.posters:hover ~ li.swish,
+li.posters:hover ~ li.creditsuisse {
+  opacity: 0; }
+
+li.milya:hover ~ {
+  opacity: 0; }
 
 html {
   margin: 0;
@@ -97,7 +138,8 @@ nav {
 ul.projects {
   list-style: none;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  overflow: hidden; }
 
 section.info {
   display: flex;
@@ -106,6 +148,16 @@ section.info {
   padding: 4em 0 4em 0;
   width: 100%;
   flex-direction: column; }
+
+.bg {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: .25s;
+  pointer-events: none; }
 
 html {
   font-family: 'Inter UI', sans-serif; }
@@ -130,16 +182,13 @@ ul {
   list-style: none;
   padding: 0; }
 
-a.project-list {
-  font-family: 'Inter UI', sans-serif;
-  font-size: 8em;
-  text-decoration: none;
-  font-weight: 100;
-  color: #0011FF; }
+b.info {
+  font-weight: 400;
+  font-size: 2.5em;
+  color: #3E3535; }
 
-a.project-list:hover {
-  color: #FFFFFF;
-  transition-duration: 0.2s; }
+p {
+  font-size: 18px; }
 
 a.elsewhere {
   font-size: 2em;
@@ -153,12 +202,56 @@ a.elsewhere:hover {
   color: #FF3769;
   transition-duration: 0.2s; }
 
-b.info {
-  font-weight: 400;
-  font-size: 2.5em;
-  color: #3E3535; }
+a.project-list {
+  font-family: 'Inter UI', sans-serif;
+  font-size: 8em;
+  text-decoration: none;
+  font-weight: 100;
+  color: #0011FF; }
 
-p {
-  font-size: 18px; }
+a.project-list:hover {
+  color: #FFFFFF;
+  transition-duration: 0.2s; }
+
+li.milya, li.swish {
+  width: min-content; }
+
+li.creditsuisse, li.posters {
+  width: max-content; }
+
+li.milya:hover ~ .bg {
+  background: #422FFA; }
+
+li.swish:hover ~ .bg {
+  background: #FFBB41; }
+
+li.creditsuisse:hover ~ .bg {
+  background: #172F5B; }
+
+li.posters:hover ~ .bg {
+  background: #262626; }
+
+li.milya:hover ~ li.swish,
+li.milya:hover ~ li.creditsuisse,
+li.milya:hover ~ li.posters {
+  opacity: 0; }
+
+li.swish:hover ~ li.milya,
+li.swish:hover ~ li.creditsuisse,
+li.swish:hover ~ li.posters {
+  opacity: 0; }
+
+li.creditsuisse:hover ~ li.milya,
+li.creditsussie:hover ~ li.swish,
+li.creditsuisse:hover ~ li.posters {
+  opacity: 0; }
+
+li.posters:hover ~ li.milya,
+li.posters:hover ~ li.swish,
+li.posters:hover ~ li.creditsuisse {
+  opacity: 0; }
+
+li.milya:hover ~ {
+  opacity: 0; }
 
 /*# sourceMappingURL=master.css.map */
