--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -65,6 +65,7 @@ ul.projects{
   list-style: none;
   display: flex;
   flex-direction: column;
+  overflow: hidden
 }
 
 section.info{
@@ -75,4 +76,18 @@ section.info{
   padding: 4em 0 4em 0;
   width: 100%;
   flex-direction: column;
+}
+
+
+//---Projects---//
+
+.bg {
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: .25s;
+  pointer-events: none;
 }
