--- a/css/master.css
+++ b/css/master.css
@@ -26,9 +26,14 @@ ul {
   padding: 0; }
 
 b.info {
+  width: 80%;
   font-weight: 400;
   font-size: 2.5em;
   color: #3E3535; }
+  @media (max-width: 599px) {
+    b.info {
+      font-size: 1.5em;
+      width: 100%; } }
 
 p {
   font-size: 18px; }
@@ -51,6 +56,9 @@ a.project-list {
   text-decoration: none;
   font-weight: 100;
   color: #0011FF; }
+  @media (max-width: 599px) {
+    a.project-list {
+      font-size: 3em; } }
 
 a.project-list:hover {
   color: #FFFFFF;
@@ -180,9 +188,14 @@ ul {
   padding: 0; }
 
 b.info {
+  width: 80%;
   font-weight: 400;
   font-size: 2.5em;
   color: #3E3535; }
+  @media (max-width: 599px) {
+    b.info {
+      font-size: 1.5em;
+      width: 100%; } }
 
 p {
   font-size: 18px; }
@@ -205,6 +218,9 @@ a.project-list {
   text-decoration: none;
   font-weight: 100;
   color: #0011FF; }
+  @media (max-width: 599px) {
+    a.project-list {
+      font-size: 3em; } }
 
 a.project-list:hover {
   color: #FFFFFF;
