--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,24 +1,13 @@
-$phone-width: "(min-width:320px) and (max-width:425px)";
-$tablet: "(min-wdith: 425px) and (max-width:768px)";
 
-
-
-// @mixin flexbox() {
-// 	display: -webkit-box;
-// 	display: -moz-box;
-// 	display: -ms-flexbox;
-// 	display: -webkit-flex;
-// 	display: flex;
-// }
-
-@mixin retina {
-  @media
-    only screen and (-webkit-min-device-pixel-ratio: 2),
-    only screen and (min--moz-device-pixel-ratio: 2),
-    only screen and (-o-min-device-pixel-ratio: 2/1),
-    only screen and (min-device-pixel-ratio: 2),
-    only screen and (min-resolution: 192dpi),
-    only screen and (min-resolution: 2dppx) {
-    @content;
-  }
+@mixin for-phone-only{
+  @media (max-width: 599px) {@content;}
+}
+@mixin for-tablet-portait-up{
+  @media (min-width:600px) {@content;}
+}
+@mixin for-tablet-landscape-up{
+  @media (min-width:900px) {@content;}
+}
+@mixin for-desktop{
+  @media (min-width: 1200px) {@content;}
 }
