--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -31,9 +31,14 @@ ul{
 }
 
 b.info{
+  width: 80%;
   font-weight: 400;
   font-size:2.5em;
   color:$default-text;
+  @include for-phone-only{
+    font-size: 1.5em;
+    width: 100%;
+  }
 }
 
 p{
@@ -61,6 +66,9 @@ a.project-list{
   text-decoration: none;
   font-weight: 100;
   color:$link-active;
+  @include for-phone-only{
+    font-size: 3em;
+  }
 }
 a.project-list:hover{
 color: $white;
