--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -68,6 +68,7 @@ a.project-list{
   color:$link-active;
   @include for-phone-only{
     font-size: 3em;
+
   }
 }
 a.project-list:hover{
@@ -78,9 +79,13 @@ color: $white;
 
 li.milya, li.swish{
   width: min-content;
+  display: block;
+  opacity: 1;
 }
 li.creditsuisse, li.posters{
   width: max-content;
+  opacity: 1;
+
 }
 
 //--Project Transitions--//
@@ -94,31 +99,41 @@ li.creditsuisse:hover ~.bg{
   background: $creditsuisse;
 }
 li.posters:hover ~.bg{
-  background: $posters;
-}
+  background: $posters
 
+}
 
 li.milya:hover ~ li.swish,
 li.milya:hover ~ li.creditsuisse,
 li.milya:hover ~ li.posters{
   opacity: 0;
+  display: none;
 }
+
 li.swish:hover ~ li.milya,
 li.swish:hover ~ li.creditsuisse,
 li.swish:hover ~ li.posters{
   opacity: 0;
+  display: none;
+
 }
 li.creditsuisse:hover ~ li.milya,
 li.creditsussie:hover ~ li.swish,
 li.creditsuisse:hover ~ li.posters{
   opacity: 0;
+  display: none;
+
 }
 li.posters:hover ~ li.milya,
 li.posters:hover ~ li.swish,
 li.posters:hover ~ li.creditsuisse{
   opacity: 0;
+  display: none;
+
 }
 
 li.posters:hover + li.milya{
   opacity: 0;
+  display: none;
+
 }
