--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -71,7 +71,8 @@ ul.projects{
   list-style: none;
   display: flex;
   flex-direction: column;
-  overflow: hidden
+  overflow: hidden;
+  min-height: 532px;
 }
 
 .bg {
