--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -3,21 +3,21 @@
 @import "mixins";
 //----------------------
 
-html{
+
+body{
+  background: $background-grey;
   margin: 0;
   padding: 0;
 }
 
-body{
-  background: $background-grey;
-}
-
 content{
   padding: 0;
-  margin: 1em;
+  margin: 1em 1em 1em 1em;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  max-width: 1440px;
+  //border: 1px solid red;
 }
 
 article{
@@ -58,12 +58,29 @@ img.logo-img:hover{
 section.info{
   display: flex;
   width: 100%;
-  margin: 0;
+  margin: 4em 0 8em 0;
   padding: 4em 0 4em 0;
-  width: 100%;
+  max-width: 1000px;
   flex-direction: column;
+  @include for-phone-only{
+    margin: 0 0 4em 0;
+  }
 }
 
+
+article.footer{
+  display: flex;
+  flex-direction:row;
+  @include for-phone-only{
+    flex-direction: column;
+  }
+  border-top: 1px solid $default-text;
+    aside.footer-link{
+      max-width: 333px;
+     margin-right: 35px;
+    }
+
+}
 
 //---Projects---//
 
