updates project page

--- a/css/master.css
+++ b/css/master.css
@@ -104,6 +104,7 @@ section.info {
       margin: 0 0 4em 0; } }
 
 article.footer {
+  margin-bottom: 5em;
   display: flex;
   flex-direction: row;
   border-top: 1px solid #3E3535; }
@@ -325,6 +326,7 @@ section.info {
       margin: 0 0 4em 0; } }
 
 article.footer {
+  margin-bottom: 5em;
   display: flex;
   flex-direction: row;
   border-top: 1px solid #3E3535; }
@@ -353,19 +355,53 @@ ul.projects {
   pointer-events: none; }
 
 section.grid {
-  padding: 1em 1em 1em 1em;
+  margin-bottom: 7em;
   display: flex;
   align-content: flex-start;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
-  max-width: 1440px;
-  border: 1px solid red; }
+  max-width: 1440px; }
+  @media (max-width: 599px) {
+    section.grid {
+      justify-content: space-between; } }
+  @media (min-width: 600px) {
+    section.grid {
+      justify-content: space-around; } }
+  @media (min-width: 900px) {
+    section.grid {
+      justify-content: space-around; } }
+  @media (min-width: 1024px) {
+    section.grid {
+      justify-content: space-around; } }
   section.grid aside.project {
-    margin: 2em 0 2em 0;
+    padding: 0 30px 0 30px;
+    margin: 2em 0em 2em 0em;
     display: flex;
     flex-direction: column;
-    max-height: 450px;
-    max-width: 580px; }
+    min-height: 420px;
+    min-width: 640px; }
+    @media (max-width: 599px) {
+      section.grid aside.project {
+        min-width: 320px; } }
+    @media (min-width: 600px) {
+      section.grid aside.project {
+        min-width: 500px;
+        margin: 2em 10px 2em 10px;
+        padding: 0 0 0 0; } }
+  section.grid article.project-description {
+    margin-top: 20px; }
+    section.grid article.project-description caption {
+      margin: 0;
+      font-size: 12px;
+      font-weight: normal; }
+    section.grid article.project-description h2 {
+      margin: 0;
+      font-size: 22px;
+      font-weight: bolder; }
+    section.grid article.project-description p {
+      font-size: 18px;
+      margin: 0;
+      font-weight: lighter; }
 
 /*# sourceMappingURL=master.css.map */
