--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -7,19 +7,63 @@
 
 
 section.grid{
-  padding: 1em 1em 1em 1em;
+  //border: 1px solid red;
+  //padding: 1em 1em 1em 1em;
+  margin-bottom: 7em;
   display: flex;
   align-content: flex-start;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
   max-width: 1440px;
-  border: 1px solid red;
+ @include for-phone-only{
+   justify-content: space-between;
+ }
+ @include for-tablet-portait-up{
+   justify-content: space-around;
+ }
+ @include for-tablet-landscape-up{
+   justify-content: space-around;
+ }
+ @include for-desktop{
+   justify-content:space-around;}
+
       aside.project{
-          margin: 2em 0 2em 0;
+        //border: 1px solid red;
+          padding: 0 30px 0 30px;
+          margin: 2em 0em 2em 0em;
           display: flex;
           flex-direction: column;
-          max-height: 450px;
-          max-width: 580px;
+          min-height: 420px;
+          min-width: 640px;
+          @include for-phone-only{
+            min-width: 320px;
+          }
+          @include for-tablet-portait-up{
+            min-width: 500px;
+            margin: 2em 10px 2em 10px;
+            padding: 0 0 0 0;
+          }
+
+
+      }
+
+      article.project-description{
+        margin-top: 20px;
+        caption{
+          margin: 0;
+          font-size: 12px;
+          font-weight: normal;
+        }
+        h2{
+          margin: 0;
+          font-size: 22px;
+          font-weight: bolder;
+        }
+        p{
+          font-size: 18px;
+          margin: 0;
+          font-weight: lighter;
+        }
       }
 }
