--- a/css/master.css
+++ b/css/master.css
@@ -375,8 +375,8 @@ section.grid {
     section.grid {
       justify-content: space-around; } }
   section.grid aside.project {
-    padding: 0 30px 0 30px;
-    margin: 2em 0em 2em 0em;
+    padding: 0 30px;
+    margin: 2em 0;
     display: flex;
     flex-direction: column;
     min-height: 420px;
@@ -387,8 +387,34 @@ section.grid {
     @media (min-width: 600px) {
       section.grid aside.project {
         min-width: 500px;
-        margin: 2em 10px 2em 10px;
-        padding: 0 0 0 0; } }
+        margin: 2em 10px;
+        padding: 0; } }
+  section.grid #swish-background {
+    background-image: url("../img/swish/main.png");
+    background-size: contain;
+    background-repeat: no-repeat; }
+  section.grid #milya-background {
+    background-size: contain;
+    background-repeat: no-repeat; }
+  section.grid #creditsuisse-background {
+    background-size: contain;
+    background-repeat: no-repeat; }
+  section.grid #movingposters-background {
+    background-size: contain;
+    background-repeat: no-repeat; }
+  section.grid .project-image {
+    padding: 0;
+    margin: 0;
+    min-width: 640px;
+    min-height: 358px; }
+    @media (max-width: 599px) {
+      section.grid .project-image {
+        min-width: 320px;
+        min-height: 220px; } }
+    @media (min-width: 600px) {
+      section.grid .project-image {
+        min-width: 500px;
+        padding: 0; } }
   section.grid article.project-description {
     margin-top: 20px; }
     section.grid article.project-description caption {
